assets/style.css
/* ... */
.navbar-expand-xl .navbar-nav .nav-item:hover .nav-link, .navbar-expand-xl .navbar-nav .nav-item.active .nav-link { color: #3E3E3E; }
.dropdown-toggle::after { display: none; }
.navbar-nav:not(.sm-collapsible) .nav-link .sub-arrow { display: none; }
.nav-inside { width: 100%; padding: 0; }
.header-right a + a { margin-left: 25px }
.nav-inside-content { padding: 30px 0; }
@media only screen and (min-width:1200px) {
    .navbar-nav>li>.dropdown-menu { display: block !important; top: 100% !important; margin-top: 10px !important; opacity: 0; visibility: hidden; background: #fff; color: #546579; min-width: 180px; box-shadow: 0 5px 8px rgba(0, 0, 0, 0.2); border: 0; border-radius: 0; transition: all 0.1s ease-in; -moz-transition: all 0.1s ease-in; -webkit-transition: all 0.1s ease-in; }
    .dropdown:hover .dropdown-menu { opacity: 1; visibility: visible; margin-top: 0px !important; transition: all 0.2s ease-in; -moz-transition: all 0.2s ease-in; -webkit-transition: all 0.2s ease-in; }
    .dropdown-item { color: #546579; padding: 5px 15px; font-weight: 400; }
    .dropdown-item:focus, .dropdown-item:hover { color: #546579; background: transparent; }
}
.navbar-toggler { width: 45px; height: 45px; border-radius: 0; cursor: pointer; text-decoration: none; padding: 0; border: 0; background: transparent; margin: 0; position: absolute; top: 0; right: 0; }
.navbar-default .navbar-toggler:hover, .navbar-default .navbar-toggler:focus { background: transparent; }
.navbar-toggler:not([class="collapsed"]), .navbar-toggler:not([class="collapsed"]):focus, .navbar-toggler:not([class="collapsed"]):hover { background: transparent; }
.navbar-toggler.collapsed, .navbar-toggler.collapsed:focus, .navbar-toggler.collapsed:hover { background: transparent; }
.navbar-toggler .icon-bar { position: relative; display: inline-block; width: 22px; height: 4px; color: #243238; text-indent: -55px; margin-top: 0; background: transparent !important; transition: all .2s ease-out; -webkit-transition: all .2s ease-out; vertical-align: middle; }
.navbar-toggler .icon-bar:before, .navbar-toggler .icon-bar:after { content: ''; width: 22px; height: 4px; background: #005983; position: absolute; left: 0; transition: all .2s ease-out; }
.navbar-toggler.collapsed .icon-bar { background: #005983 !important; }
.navbar-toggler.collapsed .icon-bar:before, .navbar-toggler.collapsed .icon-bar:after { background: #005983; }
.navbar-toggler.collapsed .icon-bar:before { top: -8px; -webkit-transform: rotateZ(0deg); -moz-transform: rotateZ(0deg); -ms-transform: rotateZ(0deg); -o-transform: rotateZ(0deg); transform: rotateZ(0deg); }
.navbar-toggler .icon-bar:before { top: 0; -webkit-transform: rotateZ(45deg); -moz-transform: rotateZ(45deg); -ms-transform: rotateZ(45deg); -o-transform: rotateZ(45deg); transform: rotateZ(45deg); }
.navbar-toggler.collapsed .icon-bar:after { bottom: -8px; -webkit-transform: rotateZ(0deg); -moz-transform: rotateZ(0deg); -ms-transform: rotateZ(0deg); -o-transform: rotateZ(0deg); transform: rotateZ(0deg); }
.navbar-toggler .icon-bar:after { bottom: 0; -webkit-transform: rotateZ(-45deg); -moz-transform: rotateZ(-45deg); -ms-transform: rotateZ(-45deg); -o-transform: rotateZ(-45deg); transform: rotateZ(-45deg); }
.navbar-expand-xl .navbar-nav .dropdown-menu, .navbar-nav.sm-collapsible .sub-arrow { display: none !important; }

.header__inline-menu, .header--middle-left .header__inline-menu{margin-left:auto !important;}

#shopify-section-header{background: #fff; position:relative;width:100%;top:4rem;transition:all 0.2s ease-in;-webkit-transition:all 0.2s ease-in;height:80px;}
#shopify-section-announcement-bar{position:fixed;width:100%;top:0}
#shopify-section-header .header {padding-top: 12px;padding-bottom: 13px;}
#shopify-section-header .header .header__icon--account{display:flex!important;}
#shopify-section-header .header-wrapper--border-bottom{border-bottom:none;}
.fixed #shopify-section-header{background:#fff;box-shadow:0 5px 8px rgba(0,0,0,0.1);}
.header__menu-item span {transition: text-decoration var(--duration-short) ease;font-size: 14px;font-weight: 500;line-height: 2rem;color:#000;font-family: 'Ratch';}
#shopify-section-header .list-menu a:hover, .header__menu-item:hover span{text-decoration:none;}
/* ================= Header End ================= */

.background-image { background-position: center !important; background-repeat: no-repeat !important; background-size: cover !important; }
.hero-container { height: 100%;}
.hero-slider { padding-bottom: 0; }
.hero-slider .slick-list { height: 100%;}
.hero-slider .slick-track { height: 100%;}
.hero-slider-item { padding: 120px 0 0 0; min-height: 100vh; min-height: calc(var(--vh, 1vh) * 100);height: 100%; }
.hero-content-box { position: relative; z-index: 1; }
.hero-img { max-width: 230px; width: 100%; margin: 0 auto 25px; }
.hero-content-box h1 { font-size: 244px; line-height: 1;white-space:nowrap;  font-weight: 900; text-transform: uppercase; font-family: 'Elephant Black'; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: -1; }
.hero-slider-item p { color: #FFDA00; font-family: 'Ratch'; font-size: 48px; font-weight: 800; line-height: 104%; max-width: 812px; margin: 0 auto; text-align: center; }
.hero-content-box h2 { display: none; }
.hero-slider .slick-dots { bottom: 16px; }
.hero-slider .slick-dots li button { width: 10px; height: 10px; background: rgb(255 255 255 / 25%); border: 0; margin: 5px; }
.hero-slider .slick-dots li.slick-active button, .hero-slider .slick-dots li:hover button { background: #fff; }
span.btn-buy { background: #FFDA00;
    width: 60px;  height: 60px;  border-radius: 50%; top: 0; left:50%;  position: absolute; color: #0C7D9D; font-size: 16px; line-height: 56px; 
    font-family: 'Ratch'; font-style: normal;  font-weight: 800; text-align: center; vertical-align: middle; margin: 0 0 0 5rem; }
.product-block-container { padding: 6rem 0 16rem; }
.product-page-recommendations { padding: 6rem 0rem; }
/* ... */

